fixed the text alignment

--- a/_htmlCSSBootCamp/14blogPostProject.css
+++ b/_htmlCSSBootCamp/14blogPostProject.css
@@ -41,7 +41,6 @@ header p {
 .topicSection ~ *{
     width: 80%;
     max-width: 800px;
-    text-align: center;
     margin: auto;
 }
 
